@@ -1,7 +1,12 @@
 language: python
 python:
-  - "3.6"
-  - "3.7"
+  - 3.6
+matrix:
+  include:
+  - python: 3.7
+    sudo: required
+    dist: xenial
+
 install:
   - pip install -r requirements.txt
 script:
