@@ -841,3 +841,7 @@ integration.
 
 *****
 
+Updated .travis.yml file.
+
+*****
+
